<resources>
    <string name="app_name">SlowGit</string>
    <string name="sign_in_to_github">Sign in to GitHub</string>
    <string name="incorrect_username_or_password">Incorrect username or password.</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="signing_in">SIGNING IN ...</string>
    <string name="sign_in_1">SIGN IN</string>
    <string name="follow">Follow</string>
    <string name="feeds">Feeds</string>
    <string name="issues">Issues</string>
    <string name="pull_requests">Pull Requests</string>
    <string name="code">Code</string>
    <string name="projects">Projects</string>
    <string name="app_name_full" translatable="false">FastHub for Android</string>
    <string name="linear_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.LinearManager</string>
    <string name="grid_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.GridManager</string>
    <string name="staggered_layout_manager" translatable="false">com.fastaccess.ui.widgets.recyclerview.layout_manager.StaggeredManager</string>
    <string name="scroll_behavior" translatable="false">@string/appbar_scrolling_view_behavior</string>
    <string name="custom_tablet_provider" translatable="false">com.fastaccess.ui.widgets.TabletBehavior</string>
    <string name="gists" translatable="false">Gists</string>
    <string name="readme" translatable="false">Readme</string>
    <string name="commits" translatable="false">Commits</string>
    <string name="repos" translatable="false">Repositories</string>
    <string name="forked" translatable="false">Forked</string>
    <string name="starred" translatable="false">Starred</string>
    <string name="icon_transition" translatable="false">profile_image_transition</string>
    <string name="title_transition" translatable="false">profile_title_transition</string>
    <string name="repo" translatable="false">Repository</string>
    <string name="download_as_zip" translatable="false">Source code (zip)</string>
    <string name="download_as_tar" translatable="false">Source code (tar.gz)</string>
    <string name="merged" translatable="false">Merged</string>
    <string name="star" translatable="false">Star</string>
    <string name="stars" translatable="false">Stars</string>
    <string name="fork" translatable="false">Fork</string>
    <string name="forks" translatable="false">Forks</string>
    <string name="issue" translatable="false">Issue</string>
    <string name="merge" translatable="false">Merge</string>
    <string name="pull_request" translatable="false">Pull Request</string>
    <string name="commit" translatable="false">Commit</string>
    <string name="markdown" translatable="false">Markdown</string>
    <string name="gist" translatable="false">Gist</string>
    <string name="back_slash" translatable="false">/</string>
    <string name="fork_repo_hint" translatable="false">Fork repo</string>
    <string name="bbn_fab_default_behavior" translatable="false">com.fastaccess.ui.widgets.FloatingActionButtonBehavior</string>
    <string name="created_gist" translatable="false">@string/gist</string>
    <string name="gollum" translatable="false">Wiki</string>
    <string name="created_issue" translatable="false">Issue</string>
    <string name="public_event" translatable="false">Open-sourced</string>
    <string name="organization_event" translatable="false">Organization</string>
    <string name="card_event" translatable="false">Card</string>
    <string name="project_event" translatable="false">Project</string>
    <string name="pr_review_event" translatable="false">Pull Request</string>
    <string name="repo_event" translatable="false">Repository</string>
    <string name="email_address" translatable="false">fastaccess.app@gmail.com</string>
    <string name="forking" formatted="true" translatable="false">Forking %s</string>
    <string name="starring" formatted="true" translatable="false">Starring %s</string>
    <string name="un_starring" formatted="true" translatable="false">Unstarring %s</string>
    <string name="un_watching" formatted="true" translatable="false">Unwatching %s</string>
    <string name="watching" formatted="true" translatable="false">Watching %s</string>
    <string name="light_theme_mode" translatable="false">Light Theme</string>
    <string name="dark_theme_mode" translatable="false">Dark Theme</string>
    <string name="amlod_theme_mode" translatable="false">Amlod Theme</string>
    <string name="mid_night_blue_theme_mode" translatable="false">Mid Night Blue</string>
    <string name="bluish_theme" translatable="false">Bluish Theme</string>
    <string name="red_theme_mode" translatable="false">Red</string>
    <string name="pink_theme_mode" translatable="false">Pink</string>
    <string name="purple_theme_mode" translatable="false">Purple</string>
    <string name="deep_purple_theme_mode" translatable="false">Deep Purple</string>
    <string name="indigo_theme_mode" translatable="false">Indigo</string>
    <string name="blue_theme_mode" translatable="false">Blue</string>
    <string name="light_blue_theme_mode" translatable="false">Light Blue</string>
    <string name="cyan_theme_mode" translatable="false">Cyan</string>
    <string name="teal_theme_mode" translatable="false">Teal</string>
    <string name="green_theme_mode" translatable="false">Green</string>
    <string name="light_green_theme_mode" translatable="false">Light Green</string>
    <string name="lime_theme_mode" translatable="false">Lime</string>
    <string name="yellow_theme_mode" translatable="false">Yellow</string>
    <string name="amber_theme_mode" translatable="false">Amber</string>
    <string name="orange_theme_mode" translatable="false">Orange</string>
    <string name="deep_orange_theme_mode" translatable="false">Deep Orange</string>
    <string name="logo_designer" formatted="true" translatable="false">Logo Designer (%s)</string>
    <string name="google_plus" translatable="false">Google+</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="posting_reaction" formatted="true" translatable="false">Posting reaction %s</string>
    <string name="daily" translatable="false">Daily</string>
    <string name="weekly" translatable="false">Weekly</string>
    <string name="monthly" translatable="false">Monthly</string>
    <string name="squash" translatable="false">Squash</string>
    <string name="rebase" translatable="false">Rebase</string>
    <string name="pull_request_reviews" translatable="false">Pull Request Reviews</string>
    <string name="review_changes" translatable="false">Review Changes</string>
    <string name="enterprise" translatable="false">Enterprise</string>
    <string name="endpoint_hint" translatable="false">example.com</string>
    <string name="no_branches" translatable="false">No Branches or Tags</string>
    <string name="pro_features" translatable="false">PRO Features</string>
    <string name="pro_features_list" translatable="false"><![CDATA[Get the PRO features of FastHub which includes:\n
        • All PRO Themes\n
        • PR Reviews & On-line code comments (PRs & Commits)\n
        • Commit from FastHub (Edit, Create & Delete files)\n
        • Supports 2 more Merging methods (Rebase & Squash)\n
        • Login to unlimited accounts\n
        • Edit & Add unlimited Gist Files\n
        • Project Columns & Cards (Edit, Create & Delete)\n
        • Pin Issues, PRs & Gists\n
        • New upcoming PRO features (Coming soon...)
    ]]></string>
    <string name="enterprise_pro_description" translatable="false"><![CDATA[
            • Login to unlimited number of Enterprise & GitHub accounts\n
            • Access GitHub contents along side your Enterprise Account
    ]]></string>
    <string name="purchase" translatable="false">Purchase</string>
    <string name="get_all" translatable="false">Purchase All (7.00USD)</string>
    <string name="fasthub_premium_features" translatable="false">FastHub Premium Features</string>
    <string name="secret_code" translatable="false">Promo Code</string>
    <string name="branches" translatable="false">Branches</string>
    <string name="github_enterprise_reply" translatable="false">
        <![CDATA[ <small><i>Reply from GitHub support regards OAuth login for Enterprise:</i></small>
                <p></p>
                <blockquote>
                <h4>Hi Kosh,</h4>
                <p>A GitHub Enterprise appliance is entirely separate from GitHub.com, and will not have your OAuth application configured.
                You will need to setup your OAuth application again for <b>FastHub</b> on the GitHub Enterprise appliance, which will provide you
                with new client_id and client_secret credentials. <b>This will have to be completed for each new GitHub Enterprise appliance
                your application communicates with</b>. GitHub Enterprise comes preconfigured with the GitHub Desktop OAuth application set up,
                this is how GitHub Desktop is able to complete the authentication successfully for GitHub Enterprise appliances.</p>
                </blockquote>
        ]]>
    </string>
    <string name="purchase_all" formatted="false" translatable="false">Purchase All for %price%</string>
    <string name="unlock" translatable="false">Unlock</string>
    <string name="unlock_everything" translatable="false">Unlock Everything</string>
    <string name="in_progress">Loading, please wait…</string>
    <string name="action">Action</string>
    <string name="settings">Settings</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_data">No data available</string>
    <string name="search">Search</string>
    <string name="please_login">Please sign in to begin using FastHub</string>
    <string name="failed_login">Sign in failed</string>
    <string name="share">Share</string>
    <string name="reload">Reload</string>
    <string name="profile">Profile</string>
    <string name="error">Error</string>
    <string name="press_again_to_exit">Press once again to exit</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="repo_chooser">Choose Repo</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="overview">Overview</string>
    <string name="unfollow">Unfollow</string>
    <string name="user">User</string>
    <string name="details">Details</string>
    <string name="archive_file_detected_error">Archive file detected, please download the file to view its content.</string>
    <string name="minimum_three_chars">Minimum characters (2)</string>
    <string name="no_file_found">No file found</string>
    <string name="no_readme_found">No readme found</string>
    <string name="downloading">Downloading…</string>
    <string name="downloading_file">Downloading file…</string>
    <string name="released">Released</string>
    <string name="drafted">Drafted</string>
    <string name="releases">Releases</string>
    <string name="no_body">No body</string>
    <string name="contributors">Contributors</string>
    <string name="contributions">Contributions</string>
    <string name="by">by</string>
    <string name="english_please">Please submit your request in english.</string>
    <string name="notifications">Notifications</string>
    <string name="report_issue">Report an issue</string>
    <string name="about">About</string>
    <string name="pinned">Pinned</string>
    <string name="organizations">Organizations</string>
    <string name="trending">Trending</string>
</resources>