<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_home">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_github_icon"
            android:title="@string/repo"
            android:visible="false" />
    </group>

    <group android:id="@+id/group_profile">
        <item
            android:id="@+id/item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/item_orgs"
            android:icon="@drawable/ic_organization"
            android:title="@string/organizations" />
        <item
            android:id="@+id/item_notifications"
            android:icon="@drawable/ic_notifications_none"
            android:title="@string/notifications" />
    </group>


    <group
        android:id="@+id/group_one"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_pinned"
            android:icon="@drawable/ic_pinned"
            android:title="@string/pinned" />

        <item
            android:id="@+id/item_trending"
            android:icon="@drawable/ic_trending"
            android:title="@string/trending" />
        <item
            android:id="@+id/item_gists"
            android:icon="@drawable/ic_github_icon"
            android:title="@string/gists" />
    </group>

    <group
        android:id="@+id/group_three"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_report"
            android:icon="@drawable/ic_bugs"
            android:title="@string/report_issue" />

        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />

        <item
            android:id="@+id/item_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>