<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_padding_huge">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_github_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_large"
        android:text="@string/sign_in_to_github"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font_size_large" />

    <RelativeLayout
        android:id="@+id/rl_incorrect_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_normal"
        android:background="@drawable/bg_incorrect_auth_msg"
        android:padding="@dimen/default_padding_large"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/incorrect_username_or_password" />

        <ImageView
            android:id="@+id/iv_close_msg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_large"
        android:background="@drawable/bg_white_fill_gray_bored"
        android:orientation="vertical"
        android:padding="@dimen/default_padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_or_email_address"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_size_medium" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_normal"
            android:background="@drawable/bg_white_fill_gray_bored"
            android:inputType="textEmailAddress"
            android:padding="@dimen/default_padding_medium"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_normal"
            android:text="@string/password"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_size_medium" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_normal"
            android:background="@drawable/bg_white_fill_gray_bored"
            android:inputType="textPassword"
            android:padding="@dimen/default_padding_medium"
            android:textSize="@dimen/font_size_medium" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_large"
            android:alpha="1"
            android:background="@drawable/bg_green_fill_gray_bored"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_size_button" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_large"
        android:text="New to GitHub? Create an account." />
</LinearLayout>
